# discogs-mcp

./: .gitignore  CLAUDE.md  ENDPOINTS.md  README.md  pyproject.toml  render.yaml  requirements.txt
src/: discogs_client.py  server_remote.py
